--- a/android/gcm/app/build.gradle
+++ b/android/gcm/app/build.gradle
@@ -1,12 +1,17 @@
 apply plugin: 'com.android.application'
 
+repositories {
+    jcenter()
+    mavenLocal()
+}
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "gcm.play.android.samples.com.gcmquickstart"
-        minSdkVersion 9
+        applicationId "agi.hackday.lobot"
+        minSdkVersion 12
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -29,6 +34,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
 
     compile 'com.android.support:appcompat-v7:23.1.1'
+
+    compile 'com.android:volley:1.0'
 
     // Testing dependencies
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
