--- a/android/gcm/app/src/main/AndroidManifest.xml
+++ b/android/gcm/app/src/main/AndroidManifest.xml
@@ -7,18 +7,30 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <!-- [END gcm_permission] -->
 
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+
     <application
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@mipmap/lobot"
             android:label="@string/app_name"
             android:theme="@style/AppTheme">
         <activity
-                android:name="agi.hackday.lobot.MainActivity"
+                android:name="agi.hackday.lobot.LaunchActivity"
+                android:exported="true"
                 android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        <activity
+                android:name="agi.hackday.lobot.MainActivity"
+                android:exported="true"
+                android:label="@string/app_name">
+            <intent-filter>
+               <action android:name="agi.hackday.lobot.view_home"/>
+               <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
 
